Lab_9_Introduction_to_OpenShift_GitOps/applications/sample-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-app-route
  labels:
    app: sample-app
spec:
  to:
    kind: Service
    name: sample-app-service
  port:
    targetPort: 80
